--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,25 @@
 {
-  "name": "Save to Pocket (mini)",
-  "description": "Adds a toolbar button to save the current page to Pocket, without requiring the \"all data\" or \"all websites\" permissions.",
-  "manifest_version": 2,
-  "version": "1",
-  "browser_action": {
-    "default_icon": "img/icon.png",
-    "default_title": "Add to Pocket"
-  },
-  "background": {
-    "scripts": [
-      "main.js"
-    ],
-    "persistent": false
-  },
-  "icons": {
-      "16": "img/16.png",
-      "48": "img/48.png",
-      "128": "img/128.png"
-  },
-  "permissions": [
-    "activeTab",
-    "https://getpocket.com/"
-  ]
+    "name": "Save to Pocket - Privacy Edition",
+    "description": "Adds a toolbar button to save the current page to Pocket, without tracking every URL you browse.",
+    "manifest_version": 2,
+    "version": "1",
+    "browser_action": {
+        "default_icon": "img/icon.png",
+        "default_title": "Add to Pocket"
+    },
+    "background": {
+        "scripts": [
+          "main.js"
+        ],
+        "persistent": false
+    },
+    "icons": {
+        "16": "img/16.png",
+        "48": "img/48.png",
+        "128": "img/128.png"
+    },
+    "permissions": [
+        "activeTab",
+        "https://getpocket.com/"
+    ]
 }
